; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/matlab/extr_icctrans.c_GetNumberOfPixels.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/matlab/extr_icctrans.c_GetNumberOfPixels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Unsupported array of %d dimensions\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @GetNumberOfPixels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetNumberOfPixels(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @mxGetNumberOfDimensions(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @mxGetDimensions(i32* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32, i32* %4, align 4
  switch i32 %10, label %26 [
    i32 1, label %11
    i32 2, label %12
    i32 3, label %17
  ]

11:                                               ; preds = %1
  store i64 1, i64* %2, align 8
  br label %29

12:                                               ; preds = %1
  %13 = load i32*, i32** %5, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %2, align 8
  br label %29

17:                                               ; preds = %1
  %18 = load i32*, i32** %5, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = load i32, i32* %22, align 4
  %24 = mul nsw i32 %20, %23
  %25 = sext i32 %24 to i64
  store i64 %25, i64* %2, align 8
  br label %29

26:                                               ; preds = %1
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @FatalError(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %27)
  store i64 0, i64* %2, align 8
  br label %29

29:                                               ; preds = %26, %17, %12, %11
  %30 = load i64, i64* %2, align 8
  ret i64 %30
}

declare dso_local i32 @mxGetNumberOfDimensions(i32*) #1

declare dso_local i32* @mxGetDimensions(i32*) #1

declare dso_local i32 @FatalError(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
